Ensure iconlinks dont break on space

--- a/quartz/styles/icons.scss
+++ b/quartz/styles/icons.scss
@@ -74,6 +74,10 @@ a.internal {
   }
 }
 
+.ref-icon {
+  white-space: nowrap;
+}
+
 .article-title .title-icon {
   margin-right: .75rem;
   font-size: 30px;
